--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,6 +1,5 @@
 \chapter{Test of DALI Zensor 5}
-This section will go through a test of a loudspeaker to understand if any vibrations in the loudspeaker affect the distortion of the loudspeaker.
-The loudspeaker which will be the basis for the test is the Zensor 5 (as seen on \autoref{fig:dali_zensor5}) given by DALI. A passive speaker has been choosen for the test because the amplifiers in DALI's active speakers are designed not to stress the loudspeaker to its limits and beyond, and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to its limits and beyond.
+Since now a basic understanding of the loudspeaker topology has been given it is deemed relevant to observe an actual speakers performance to see if any problem arises when the speaker is pushed to its limits. This section will go through a test of a loudspeaker to investigate and to check if any vibrations in the loudspeaker affect the distortion of the loudspeaker. The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produces by DALI. A passive speaker has been choosen for the test because the amplifiers in DALI's active speakers are designed not to stress the loudspeaker to its limits and beyond, and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
 
 \begin{figure}[H]
 \centering
@@ -11,7 +10,7 @@ The loudspeaker which will be the basis for the test is the Zensor 5 (as seen on
 
 %\todo[inline]{Reference http://www.dali-speakers.com/loudspeakers/zensor/zensor-5/}
 
-For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring distortion a microphone has been placed 1 m from the speaker. To limit any reflection from a room for example, the test is perfomed in the Anechoic room at \gls{AAU} see \ref{fig:test_setup_R}.  
+For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring distortion a microphone has been placed 1 m from the speaker. To limit any reflection from the room, the test is perfomed in the Anechoic room at \gls{AAU} see \ref{fig:test_setup_R}.  
 %\todo[inline]{Reference (09.03.2016) http://doc.es.aau.dk/labs/acoustics/facilities/anechoic_room_large/} 
 
 
@@ -21,137 +20,47 @@ The loudspeaker is set to play a sinesweep from the crossover frequency of the s
 
 \section{Analysis of the DALI Zensor AX 5 measurements}
 
-In this section an analysis of the data extracted from the test DALI Zensor 5 AX will be presented. The purpose of this analysis is to examine if it possible to tell the current performance of the loudspeaker from the accelerometer placed on the loudspeaker. There are many different approaches in analysing the measured data, and the extent of the analysis will be analysing the frequency response of the loudspeaker vibration, harmonic distortion, and detection of the coil hitting the back plate of the driver. The structure of the following part of this section will be:
+In this section a brief review and conclusion of the analysis done in \autoref{app:journal_speaker_test} is presented. The purpose of this analysis is to examine if it possible to tell the current performance of the loudspeaker from the accelerometer placed on the loudspeaker. There are many different approaches in analysing the measured data, and the approach done in this project, will be analysing the frequency response of the loudspeaker vibration, harmonic distortion, and detection of the coil hitting the back plate of the driver. The structure of the following part of this section will be showing how the speaker reacts to the different levels of amplification and to expose if a pattern can be modelled.
 
-\begin{itemize}
-\item Presentation of the measured data.
-\item Frequency response of the measured data.
-\item Harmonic distortion measured by the microphone and accelerometers.
-\item Back plate hit detection.
-\end{itemize}
+\subsection{Experiment analysis}
 
-Before analysing the measured the measured data will be presented.
+As previously stated there are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.
 
-\section{Introduction to Measured Data}
+\vspace{3mm}
 
-As previously stated there are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. The remaining data are available on the CD. The first dataset from the test is shown in \autoref{fig:raw1}.
+During the first measurements the speaker act more ore less totally linear. The frequency response keeps being steadily the same just with an increase in amplitude. This was as expected, A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a speaker. When we push the speaker beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
 
 \begin{figure}[H]
 \centering
-\begin{subfigure}[t]{0.335\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_driver1.pdf}
-	\caption{Vibration from driver.}
-	\label{fig:raw_driver1}
+\begin{subfigure}[t]{0.55\textwidth}
+	\tikzsetnextfilename{raw_driver19_window}
+	\input{figures/raw_driver19_window.tex}
+	\caption{Raw dataset 19 for driver.}
+	\label{fig:raw_driver19_window_main}
 \end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_enclosure1.pdf}
-	\caption{Vibration from enclosure.}
-	\label{fig:raw_enclosure1}
+%\hspace{6mm} 
+\begin{subfigure}[t]{0.43\textwidth}
+	\tikzsetnextfilename{raw_driver19_window_zoom}
+	\input{figures/raw_driver19_window_zoom.tex}
+	\caption{The grey area zoomed in.}
+	\label{fig:raw_driver19_window_zoom_main}
 \end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_microphone1.pdf}
-	\caption{Sound pressure from microphone.}
-	\label{fig:raw_microphone1}
-\end{subfigure}
-\caption{The measured data of (a) the vibration on the driver, (b) the vibration on the enclosure, and (c) the sound pressure from the microphone. Dataset 1.}
-\label{fig:raw1}
-\end{figure} 
+\caption{The greyed area is analysed to examine if there are any signs of an impulse.}
+\label{fig:raw_driver19_windows_main}
+\end{figure}
 
-
-Looking at the first dataset reveals that there are mechanical issues with the loudspeaker. In \autoref{fig:raw_driver1} there is a strong indication of a resonance frequency at 25 seconds with a peak amplitude on approximately 0.02. A similar observation can be found in \autoref{fig:raw_enclosure1} which shows the vibration measured by the accelerometer placed on the enclosure where a resonance frequency appears after 25 seconds. Another mechanical resonance frequency can be found located after 14 seconds for the enclosure. The sound pressure level measured by the microphone is in contrast fairly linear compared to the measured vibrations. Dataset 10 is shown in \autoref{fig:raw10} where the gain is increased by 10 dB.
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}[t]{0.335\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_driver10.pdf}
-	\caption{Vibration from driver.}
-	\label{fig:raw_driver10}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_enclosure10.pdf}
-	\caption{Vibration from enclosure.}
-	\label{fig:raw_enclosure10}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_microphone10.pdf}
-	\caption{Sound pressure from microphone.}
-	\label{fig:raw_microphone10}
-\end{subfigure}
-\caption{The measured data of (a) the vibration on the driver, (b) the vibration on the enclosure, and (c) the sound pressure from the microphone. Dataset 10.}
-\label{fig:raw10}
-\end{figure} 
-
-The measurements from dataset 10 is very similar to the measurements seen in dataset 1. Since no particular change is happening between dataset 1 to 10 it is assumed that the performance of the loudspeaker remains good. A further analysis of the performance speaker will be done in the analysis of the harmonic distortion section to examine the amount of harmonic distortion present. Dataset 14 is shown in \autoref{fig:raw14}. 
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}[t]{0.335\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_driver14.pdf}
-	\caption{Vibration from driver.}
-	\label{fig:raw_driver14}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_enclosure14.pdf}
-	\caption{Vibration from enclosure.}
-	\label{fig:raw_enclosure14}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_microphone14.pdf}
-	\caption{Sound pressure from microphone.}
-	\label{fig:raw_microphone14}
-\end{subfigure}
-\caption{The measured data of (a) the vibration on the driver, (b) the vibration on the enclosure, and (c) the sound pressure from the microphone. Dataset 14.}
-\label{fig:raw14}
-\end{figure} 
-
-While most of the measurements show the exact same characteristics as previous datasets, a slight change occurs in the end of the vibration measured on the driver in \autoref{fig:raw_driver14} and the sound pressure level in \autoref{fig:raw_microphone14}. After approximately 29 seconds a peak is observed in \autoref{fig:raw_driver14} which could indicate that the coil at that point hit the back plate of the driver. A further examination will be made in a later section. The measurements from the microphone, also show that a peak occurs at the same point, which most likely will cause the amount of harmonic distortion to increase. Dataset 19, which is the last dataset before the loudspeaker break down, is shown in \autoref{fig:raw19}.
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}[t]{0.335\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_driver19.pdf}
-	\caption{Vibration from driver.}
-	\label{fig:raw_driver19}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_enclosure19.pdf}
-	\caption{Vibration from enclosure.}
-	\label{fig:raw_enclosure19}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_microphone19.pdf}
-	\caption{Sound pressure from microphone.}
-	\label{fig:raw_microphone19}
-\end{subfigure}
-\caption{The measured data of (a) the vibration on the driver, (b) the vibration on the enclosure, and (c) the sound pressure from the microphone. Dataset 19.}
-\label{fig:raw19}
-\end{figure} 
-
-Dataset 19 has the same characteristics as dataset 14, though with a more noticeable peak at 29 seconds for both the measurements from the driver and the microphone. In the last dataset shown in \autoref{fig:raw20}, the loudspeaker breaks down.
+Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes. The spikes appear with no sudden coherence. Looking further into the specific area, around 70-90 Hz, an FFT analysis show how hit on the back plates appear. This is shown on \autoref{fig:FFT_hit_Main}.
 
 
 \begin{figure}[H]
 \centering
-\begin{subfigure}[t]{0.335\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_driver20.pdf}
-	\caption{Vibration from driver.}
-	\label{fig:raw_driver20}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_enclosure20.pdf}
-	\caption{Vibration from enclosure.}
-	\label{fig:raw_enclosure20}
-\end{subfigure}
-\begin{subfigure}[t]{0.3\textwidth}
-	\includegraphics[width=1\textwidth]{figures/raw_microphone20.pdf}
-	\caption{Sound pressure from microphone.}
-	\label{fig:raw_microphone20}
-\end{subfigure}
-\caption{The measured data of (a) the vibration on the driver, (b) the vibration on the enclosure, and (c) the sound pressure from the microphone. Dataset 20.}
-\label{fig:raw20}
-\end{figure} 
+\tikzsetnextfilename{FFTFinal}
+\input{figures/Forsog1/FFTFinal.tex}
+\caption{The spectrum of the window. The yellow graph is dataset 1, red is 10 and blue is 19.}
+\label{fig:FFT_hit_Main}
+\end{figure}
 
-As seen in \autoref{fig:raw_driver20} the loudspeaker unit breaks down at the mechanical resonance frequency for the driver. The reason to why vibrations on the enclosure and sound pressure are still presentthe  after 25 seconds is because the other loudspeaker unit did not entirely break down. Since the loudspeaker unit broke down at the mechanical driver resonance frequency, it would be relevant to examine if there is any correlation as such.
+\autoref{fig:FFT_hit_Main} Shows that this area is affected by hits. Conforming \autoref{subsec:impulses} it can be seen that is an increase in energy level across all frequencies. This is particularly seen when comparing measurement 10 through 19. It is possible to see how the fundamental at 80 Hz is not increasing dramatically. This is due to the high needs of wattages at that point. However, the entire signals lies more or less 20 dB higher which corresponds to 100 times the energy. This concludes that hits occur but at a relatively very high volume level. From this the following problem statement, in \autoref{ProblemStatement}, can be derived.
 
 
 
