new figures and updates

--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -17,10 +17,9 @@ At this point it is yet to be determined if the system will be based on a feedba
 \tikzsetnextfilename{Concept}
 \scalebox{0.8}{
 \input{figures/Concept.tex}}
-\caption{CHANGE DIAGRAM TO A FEEDFORWARD SYSTEM}
+\caption{Overview of design concept.}
 \label{fig:Concept}
 \end{figure}
-\todo[inline]{Fiks billede}
 The concept consist of a filtering or limitation block, which will be analysed to understand which solution is best for the problem stated, a signal analysis block and decision block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used. 
 
 
