new update, limiter section

--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Limiter.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Limiter.tex
@@ -4,17 +4,17 @@ Instead of equalizing the signal it is possible to limit the signal instead by u
 y(n) = g(n)\cdot x(x-D)
 \end{equation}
 
-<<<<<<< HEAD
-Where an input $x(n)$ is delayed by $D$ and multiplied by a weigthing $g(n)$ to give $y(n)$ which is also seen in more detail on \autoref{fig:limiter_block}.
-  
-=======
-Where an input $x(n)$ is delayed by $D$ and multiplied by a weigthing $g(n)$ to give $y(n)$, or as a logarithmic level representation where multiplication leads to the addition of $G_{dB}(n)$ and $X_{dB}(n)$:
+%<<<<<<< HEAD
+%Where an input $x(n)$ is delayed by $D$ and multiplied by a weigthing $g(n)$ to give $y(n)$ which is also seen in more detail on \autoref{fig:limiter_block}.
+%  
+%=======
+Where an input $x(n)$ is delayed by $D$ and multiplied by a weighting $g(n)$ to give $y(n)$, or as a logarithmic level representation where multiplication leads to the addition of $G_{dB}(n)$ and $X_{dB}(n)$:
 \begin{equation}
 Y_{dB}(n) = X_{dB}(n) + G_{dB}(n)
 \end{equation}
 
 A limiter system is also seen in more detail on \autoref{fig:limiter_block}.
->>>>>>> c91376d49f6a0e422df72eca15855971ebc587b3
+%>>>>>>> c91376d49f6a0e422df72eca15855971ebc587b3
 
 \begin{figure}[H]
 \centering
