--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -1,33 +1,44 @@
 \section{Processor Platform}
-This section will reference the demands for the processor platform given by DALI and analyse which processor platform will be optimal for these condition. 
-
-\subsection*{Demands for the platform}
-The demands for the processor platform have been derived in a mail corresodance with DALI 
+The purpose of this section is to derive the requirements for the digital development platform. Most of the requirements derived in this section are provided by DALI thus the choice of platform will mostly be based on an analysis of which processor platform will be optimal in order to fulfil the requirements. The requirements for the processor platform have been derived in a mail correspondence with DALI.
 \todo[inline]{Reference til CD}
+%\subsection*{Demands for the platform}
+%The demands for the processor platform have been derived in a mail correspondence with DALI 
+%\todo[inline]{Reference til CD}
+\begin{itemize}
+\item \textbf{Audio sample rate}: The system must be able to handle 96 kHz sample rate since peripheral components will interface be running at this rate.
+\item \textbf{Audio resolution}: There must be support for audio in at least a 24 bit resolution since the \gls{DAC} chosen by DALI is of 24 bit.
+\item \textbf{\gls{SNR}}: A minimum \gls{SNR} of 120 dB on the \gls{DAC} must be achieved. This will provide headroom for digital volume control.
+\item \textbf{Performance}: The processor must a least be able to run 1024 instructions per sample. which would give approximately 100 \gls{MIPS}.
+\item \textbf{Program space}: The platform will consist of an equalizer and limiter when finished. This project will however focus on the equalizer and sensory system. Hence it only desireable to leave TBD room for an multi band limiter which is desired by DALI. 
+\item \textbf{Interfacing to peripherals}: The platform must be able to interface with an ADC and DAC with the bus type \gls{I2S}. Besides the interfacing with the ADC and DAC the platform must be able to interface with the chosen sensor in \autoref{sec:Sensor}.
 
-\textbf{Sample rate} \\
-The system must be able to handle 96 kHz sample rate since peripheral components will interface be running at this rate.
-
-\textbf{Bit resolution} \\
-There must be support for audio in at least a 24 bit resolution since the \gls{DAC} chosen by DALI is of 24 bit.
-
-\textbf{\gls{SNR}} \\
-A minimum \gls{SNR} of 120 dB on the \gls{DAC} must be achieved. This will provide headroom for digital volume control.
-
-\textbf{Instructions pr. sample.} \\
-The processor must a least be able to run 1024 intructions pr. sample. which would give approximately 100 \gls{MIPS}
-
-
-\textbf{Memory for both an equalizer and multi band limiter} \\
-The platform will consist of an equalizer and limiter when finished. This project will however focus on the equalizer and sensory system. Hence it only desireable to leave TBD room for an multi band limiter which is desired by DALI. 
+The 32 bit resolution is prefered by DALI over a 24 bit resolution because it would give a increased \gls{SNR} of 48 dB. These demands lead to the analyzation of which platform would be the most optimal.  
+\end{itemize}
 
 
-\textbf{Interfacing} \\
-The platform must be able to interface with an ADC and DAC with the bus type \gls{I2S}. Besides the interfacing with the ADC and DAC the platform must be able to interface with the chosen sensor in \autoref{sec:Sensor}.
+%\subsection*{Sample rate} 
+%The system must be able to handle 96 kHz sample rate since peripheral components will interface be running at this rate.
+%
+%\subsection*{Bit resolution} 
+%There must be support for audio in at least a 24 bit resolution since the \gls{DAC} chosen by DALI is of 24 bit.
+%
+%\subsection*{\gls{SNR}} 
+%A minimum \gls{SNR} of 120 dB on the \gls{DAC} must be achieved. This will provide headroom for digital volume control.
+%
+%\subsection*{Instructions pr. sample.} 
+%The processor must a least be able to run 1024 intructions pr. sample. which would give approximately 100 \gls{MIPS}
+%
+%
+%\subsection*{Memory for both an equalizer and multi band limiter} 
+%The platform will consist of an equalizer and limiter when finished. This project will however focus on the equalizer and sensory system. Hence it only desireable to leave TBD room for an multi band limiter which is desired by DALI. 
+%
+%
+%\subsection*{Interfacing} 
+%The platform must be able to interface with an ADC and DAC with the bus type \gls{I2S}. Besides the interfacing with the ADC and DAC the platform must be able to interface with the chosen sensor in \autoref{sec:Sensor}.
+%
+%The 32 bit resolution is prefered by DALI over a 24 bit resolution because it would give a increased \gls{SNR} of 48 dB. These demands lead to the analyzation of which platform would be the most optimal.   
 
-The 32 bit resolution is prefered by DALI over a 24 bit resolution because it would give a increased \gls{SNR} of 48 dB. These demands lead to the analyzation of which platform would be the most optimal.   
-
-\subsection*{Choice of processor platform}
+\subsection{Choice of processor platform}
 For the choice of processor platform different types of platforms could be used, such as an ASIC chip, an \gls{FPGA}, a microcontroller ($\mu$C) or a \gls{DSP}. These types of processors have different advantage and disadvantages which needs to be analyzed to find the most optimal platform for the demands above. The basic difference between the types of platforms is given in \autoref{tb:summary_DSP_hardware_implementation}. 
 
 \begin{table}[H]
@@ -47,7 +58,7 @@ For the choice of processor platform different types of platforms could be used,
 \end{table}
 
 
-Because filtering is needed in an equalizer and the high performance demands from above the natural choice of platform would be a \gls{DSP}. An asic chip would not be viable as a prototype platform because it does not have any flexibility. The FPGA lacks flexibility, has an increased design time and is not good at signal processing. The microcontroller has less performance than a \gls{DSP}, cost more and normally has a bigger power consumption than a \gls{DSP} so as stated before a \gls{DSP} is the choice of platform.     
+Because filtering is needed in an equalizer and the high performance demands from above the natural choice of platform would be a \gls{DSP}. An ASIC chip would not be viable as a prototype platform because it does not have any flexibility. The FPGA lacks flexibility, has an increased design time and is costly. The microcontroller has less performance than a \gls{DSP}, cost more and normally has a bigger power consumption than a \gls{DSP} so as stated before a \gls{DSP} is the choice of platform.     
 
 
 
