thing for journal

--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -34,7 +34,7 @@ The signal analysis block is the part of the system which makes the signal analy
 The decision block decides how the regulating equalizer should regulate the input signal based on the input from the signal analysis block. 
 
 \textbf{Regulating equalizer} \\
-The regulating equalizer 
+The regulating equalizer should dampen the input signal if the decision block 
 
 \textbf{Limiter} \\
 The limiter
