--- a/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
+++ b/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
@@ -1,13 +1,12 @@
 \chapter{Speaker single frequency Lab test} \label{app:journal_speaker_test2}
 
-The purpose of this test is to examine one frequency at different sound levels until the membrane hits the coil. By only playing at one frequency a high resolution graph of the FFT can be achieved because of the large sample size. This makes it easier to analyze what precisely happens right before the coil hits the backplate, to determine if a pattern can be spotted before the coil hits the backplate
+The purpose of this test is to examine one frequency at different sound levels until the loudspeaker distorts the sound by a significant margin. By only playing at one frequency a high resolution graph of the FFT can be achieved because of the large sample size, to determine if there is a correlation between the key note and the second and third harmonic wave at different sound levels.
 
 
 \section{Setup}
 
 The setup of this experiment are depicted in Figure \ref{figure:SpeakertestSetup}, where the equipment is catalogued in \autoref{tab:UsedEquipment1}, and described as follows:
 
-\todo[inline]{Skriv vores egen accelerometer setup ind.}
 \begin{itemize}
 \item Distortion and \gls{SPL} will be measured by a microphone at a distance 1 meter in accordance with IEC 60268-5 Sound System Equipment - Part 5: Loudspeaker.
 \item Vibration will be measured by a Brüel \& Kjear Type 4344 accelerometer, placed at:
@@ -59,7 +58,7 @@ IEC 60268-5 standard.
     9      &  B \& K Accelerometer calibrator 4294 & 08023   \\
     10     &  B \& K Microphone calibrator 4231 & 78301   \\
     11     &  RME HammerFall DIGI 96-PDST sound card & 60919  \\
-    12     &  TBD Power Supply & TBD  \\
+    12     &  TBD Power Supply & 33914  \\
     13     &  ADXL335 Accelerometer (Sparkfun Breakout) & NaN  \\
     14     &  Passive Dali Zensor 5 AX & NaN  \\ \bottomrule 
 \end{tabular}
@@ -80,23 +79,19 @@ The producer for this experiment is described as follows:
 \item Driver and enclosure accelerometers
 \item Microphone and playback loop
 \end{itemize}
-\item Playback file \path{SingleToneX.wav}, which is a sinusoidal tone at \textbf{TBD} Hz. The amplitude is 0 dBFS.
+\item Playback file \path{SingleTone.wav}, which is 2 second sinusoidal tone at 50 Hz, then 2 seconds break, then a 2 second sinusoidal tone at 55 Hz which is continued until 100 Hz. The amplitude is 0 dBFS.
 \item After playback, stop recording all channels
 \item Save recordings as \path{.wav} file
 \item Enter room and adjust amplifier by +1 dB
-\item Repeat step 2 through 7 until the coil hits the back plate.
-\item Repeat step 8 with \path{SingleToneX.wav}, where X is:
-\begin{itemize}
-\item 100, 75, 50, ... \textbf{TBD}
-\end{itemize}
+\item Repeat step 2 through 7 13 times.
 \end{enumerate}
 
-The \path{SingleToneX.wav} can be found on:\\
+The \path{SingleTone.wav} can be found on:\\
 \scalebox{0.7}{
-\path{CD://Maalinger/XX/SingleToneX.wav}}\\
+\path{CD://Maalinger/XX/SingleTone.wav}}\\
 
 \section{Data Extraction}
-
+It was possible to increase the volume by 12 dB before the test was stopped because of the risk of damaging the loudspeaker.
 The recordings can be found on:\\
 \scalebox{0.7}{
 \path{CD://Maalinger/XX}}
@@ -109,9 +104,68 @@ And is indexed in folders \scalebox{0.8}{\path{Measure_X}}, where X corresponds 
 \end{itemize}
 
 
-\section{Analysis}
+\section{Raw data}
+For each of the test six measurements was taken. These are the accelerometers placed on the
+driver and enclosure, the microphone and a reference to synchronize the measurements.
 
-Comments and potential further manipulation is documented in this section. 
+As previously stated there are in total 13 datasets each containing six measurements. The amount of data is therefore large and only
+relevant datasets will be presented. The first dataset from the test is shown in \autoref{fig:raw1t2}.
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_BK_driver1}
+    \input{figures/raw_BK_driver1.tex}
+    \caption{Vibration from driver (B\&K).}
+    \label{fig:raw1t2_BK_driver1}
+\end{subfigure}
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_SF_driver1}
+    \input{figures/raw_SF_Driver1.tex}
+    \caption{Vibration from driver (SF).}
+    \label{fig:raw1t2_SF_driver1}
+\end{subfigure} 
+
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_BK_enclosure1}
+    \input{figures/raw_BK_enclosure1.tex}
+    \caption{Vibration from enclosure (B\&K).}
+    \label{fig:raw1t2_BK_enclosure1}
+\end{subfigure}
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_SF_enclosure1}
+    \input{figures/raw_SF_enclosure1.tex}
+    \caption{Vibration from enclosure (SF).}
+    \label{fig:raw1t2_SF_enclosure1}
+\end{subfigure}
+
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_mic1}
+    \input{figures/raw_mic1.tex}
+    \caption{Sound pressure level from microphone.}
+    \label{fig:raw1t2_mic1}
+\end{subfigure}
+\begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \tikzsetnextfilename{raw_reference1}
+    \input{figures/raw_reference1.tex}
+    \caption{Reference signal.}
+    \label{fig:raw1t2_reference1}
+\end{subfigure}
+
+\caption{The measured data of (a) the vibration on the driver (B\&K), (b) the vibration on the driver (SF), (c) the vibration on the enclosure (B\&K), (d) the vibration on the enclosure (SF), (e) the sound pressure from the microphone and (f) the reference signal. Dataset 1.}
+\label{fig:raw1t2}
+\end{figure} 
+
+From the raw data the tones (50 Hz, 55 Hz, 60 Hz, 65 Hz, 70 Hz, 75 Hz, 80 Hz, 85 Hz, 90 Hz, 95 Hz, 100 Hz) can be cropped into seperate files so they can be analysed seperately. An example of this can be seen on 
+
+\section{Analysis}
+To determine if there is a correlation between the keynote and the second and third harmonic wave the maximum amplitude of the keynote, second harmonic and third harmonic must be identified. To identify the maximum amplitude an FFT is made to get the frequency response of the different frequencies and sound levels needs to be determined.   
 
 \section{Error sources}
 
