skrevet til Krav

--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -9,7 +9,7 @@ This chapter will describe a of the sytem before the requirements of the system 
 \caption{Overview of the system}
 \label{fig:SystemOverview}
 \end{figure}
-
+\todo[inline]{fiks Billede så den passer med det aktuelle system}
 A more detailed description of every block will now follow.
 
 \textbf{Audio source} \\
