--- a/Rapport/2Appendix/SpeakerTEST.tex
+++ b/Rapport/2Appendix/SpeakerTEST.tex
@@ -385,12 +385,13 @@ The advantages of using a spectrogram is that it gives a good overview of the sp
 \begin{subfigure}[t]{0.47\textwidth}
 	\tikzsetnextfilename{Microphone_spec1}
 	\input{figures/Forsog1/Microphone_spec1.tex}
+	\caption{Microphone dataset 1}
 	\label{fig:spectrogram_mic1}
 \end{subfigure}
 \begin{subfigure}[t]{0.47\textwidth}
 	\tikzsetnextfilename{Microphone_spec19}
 	\input{figures/Forsog1/Microphone_spec19.tex}
-	\caption{Microphone dataset 19.}
+	\caption{Microphone dataset 19}
 	\label{fig:spectrogram_mic19}
 \end{subfigure}
 \caption{The spectrograms of the microphone dataset 1 and 19. The prominent red line is the sine sweep from 2.4 kHz to 10 Hz while the yellow and blue lines along the red line are harmonic distortion.}
