--- a/Rapport/figures/Concept.tex
+++ b/Rapport/figures/Concept.tex
@@ -5,7 +5,7 @@
 %% DSP %%
 \node [block, fill=blue!15] (Equalizer1) at ($(AudioSource)+(3.5,0)$) {Equalizer};
 \node [block, fill=blue!15] (SpectralAnalysis) at ($(Equalizer1)+(3.5,0)$) {Signal analysis};
-\node [block, fill=blue!15] (Equalizer) at ($(SpectralAnalysis)+(4.5,0)$) {Filtering or limitation};
+\node [block, fill=blue!15] (Equalizer) at ($(SpectralAnalysis)+(4.5,0)$) {Signal processing};
 
 
 %% External %%
